--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,28 @@
+Primary TODOs:
+* Sanity checks before and after every command
+  * Only one player per table has TURN.
+  * At most one player per table has BET.
+  * Total amount of money (Players.Bet + Tables.Pot + Players.Chips) beforehand equals after.
+  * A player has TURN, OR a command is queued // command returns true or RUN
+
+Suggestions:
+* Flash on your turn
+* All-in show
+* Zoom integration?
+* Indicators stay until end of hand or turn?
+BUGGGGGG: Multiple people had TURN
+
 BUGS:
-* Bet plaque shows compared to minbet. Bet 50 -> "Raise 0"
+* Bet plaque shows incorrect number. Bet 50 -> "Raise 0" "Raise 25" when
+  should be 50. etc.
 * Show all-in cards instead of hiding until winner is declared.
 * Add All-in cards to log when auto-play is enabled.
-* Add bet amounts to green status div and player state. Use DisplayState?
 
 TODO:
+* Add bet amounts to green status div and player state. Use DisplayState?
 * Graying overlay of cards for "Checked" "Called", etc, if you've already
   gone.
 * Show backs of cards, grayed out, for "folded" ?
-* Indicate pre-check and pre-fold somehow.
 * Auto-checkfold for idle players
 * Disable and discolor Bet Plaque when not able to do anything
 * Muck cards or show 'em on loss?
@@ -44,3 +58,8 @@ FIXED:
 * Whose turn is it? Show!
 * Overlay messages? (Add PlayerId to LogItem)
 * Events: Triggers for JS and for UI animations.
+* Indicate pre-check and pre-fold somehow.
+* Fake AIs:
+  * Weights (prefer to call rather than raise, and raise rather than fold)
+  * Wait random amount of time, from 0secs to 2s after OnTurn
+* JS Web Desktop Notifications
