--- a/TODO.txt
+++ b/TODO.txt
@@ -6,9 +6,9 @@ Suggestions:
 BUGS:
 * Can't duplicate: kqq87 beat kqqtt somehow? Winner was all-in from Flop.
 * Queued: Bet, should be Call.
+* On raise, MinBet is set improperly if Player.Bet = 25 and CurBet = 50.
 
 TODO:
-* Add bet amounts to green status div and player state. Use DisplayState?
 * Graying overlay of cards for "Checked" "Called", etc, if you've already
   gone.
 * Show backs of cards, grayed out, for "folded" ?
@@ -21,10 +21,10 @@ TODO:
 * Ranking list
 * Admin panel: Quit game, return to registry, Kick Player, kickstart game
 * Cash game support
-* Buyin button
-* Cashout button
+  * Buyin button
+  * Cashout button
 * index.html should store results in cookies and show them to reduce # of
-  "What was the game I created?"
+  "What was the game I created?" - or find rooms by query.
 
 FIXED:
 * Pre-check, Pre-fold
@@ -64,3 +64,4 @@ FIXED:
 * Combine log events and only publish on SaveGame
 * Show all-in cards instead of hiding until winner is declared.
 * Add All-in cards to log when auto-play is enabled.
+* Add bet amounts to green status div and player state. Use DisplayState?
